--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,9 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.0
-  transparent_image: '^0.1.0'
+  cupertino_icons: ^0.1.2
+  transparent_image: ^0.1.0
+#  cloud_firestore: ^0.7.2
 
 dev_dependencies:
   flutter_test:
@@ -32,6 +33,7 @@ flutter:
   #  - images/a_dot_ham.jpeg
   assets:
       - assets/attendees.json
+      - assets/gdg_charlotte_logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
