--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,12 +4,8 @@ description: A new Flutter project.
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
-  transparent_image: ^0.1.0
-#  cloud_firestore: ^0.7.2
+  cloud_firestore: '^0.7.0'
+  transparent_image: '^0.1.0'
 
 dev_dependencies:
   flutter_test:
