--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,7 @@ dependencies:
     sdk: flutter
   cloud_firestore: '^0.7.0'
   transparent_image: '^0.1.0'
+  cached_network_image: "^0.4.1"
 
 dev_dependencies:
   flutter_test:
